recursion.cons.concat.Concat.scala.error
Erreur de compilation :
Concat:6: error: recursive method aux needs result type
      case h::q => aux(q, l2, h::r)
                   ^Concat:9: error: not found: value reverse
  aux(reverse(l1),l2,Nil)
      ^